--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,5 +4,9 @@
 <% if user_signed_in? %>
   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
 <% else %>
-  <%= link_to 'Sign In', user_session_path %>
+  <%= link_to 'Sign In', user_session_path, method: :get %>
+<% end %>
+<br><br>
+<% User.all.each do |user| %>
+  <%= user.email %> | <%= link_to 'Delete', user_registration_path(user), method: :delete, data: { confirm: "You sure?" } %>
 <% end %>
