--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,3 +10,11 @@
 <% User.all.each do |user| %>
   <%= user.email %> | <%= link_to 'Delete', user_registration_path(user), method: :delete, data: { confirm: "You sure?" } %>
 <% end %>
+<br><br>
+<strong>I'm up to...</strong>
+<ul>
+  <li>Creating the user_controller and making an admin and a super admin</li>
+  <li>Need to limit profile create to 1 per user and prevent them from seeing anyone else's profiles</li>
+  <li>Create a 'delete' def in user to log out a user</li>
+  <li>Force a user to create a profile before going any further or being able to see another page. Always direct to profile.</li>
+</ul>
