--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,8 @@
 <% end %>
 <br><br>
 <% User.all.each do |user| %>
-  <%= user.email %> | <%= link_to 'Delete', user_registration_path(user), method: :delete, data: { confirm: "You sure?" } %>
+  <%= user.email %> | <%# link_to 'Delete', destroy_me_path, method: :delete, data: { confirm: "You sure?" } %>
+  <%= link_to 'Delete User', user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
 <br><br>
 <strong>I'm up to...</strong>
