--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,25 @@
 <% else %>
   <%= link_to 'Sign In', user_session_path, method: :get %>
 <% end %>
+
+<br>
+  <hr>
+<br>
+
+<% if current_user.profile %>
+      <span>Welcome back, <%= current_user.profile.company_name %>,
+      you're role is
+        <% if current_user.has_role? :admin %>
+            <span><strong>admin</strong></span>
+            <% else current_user.has_role? :super_admin %>
+              <span><strong>super admin</strong></span>
+        <% end %>
+      </span>
+  <% else %>
+      <span>How about creating <%= link_to 'a profile?', new_profile_path %></span>
+      <br>
+      <hr>
+<% end %>
 <br><br>
 <% User.all.each do |user| %>
   <%= user.email %> | <%# link_to 'Delete', destroy_me_path, method: :delete, data: { confirm: "You sure?" } %>
@@ -14,8 +33,9 @@
 <br><br>
 <strong>I'm up to...</strong>
 <ul>
-  <li>Creating the user_controller and making an admin and a super admin</li>
+  <li>Most recent: I'm up to redirecting a user to the 'create a profile' page automatically after log in if they haven't set up a profile using "if current_user.profile"</li>
+  <li>Creating the user_controller and making an admin and a super admin <span class="btn btn-warning btn-sml">In Progress, privelages for admin/super need to be defined</span></li>
   <li>Need to limit profile create to 1 per user and prevent them from seeing anyone else's profiles</li>
-  <li>Create a 'delete' def in user to log out a user</li>
+  <li>Create a 'delete' def in user to log out a user <span class="btn btn-success btn-sml">Done!</span></li>
   <li>Force a user to create a profile before going any further or being able to see another page. Always direct to profile.</li>
 </ul>
