--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<!-- Temp navbar for dev -->
+<% if user_signed_in? %>
+    <%= render 'layouts/nav' %>
+<% end %>
+
+<% if current_user.profile %>
+  
+<% end %>
 <!--Temp placement of notifications-->
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
