--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
     <%= render 'layouts/nav' %>
 <% end %>
 
-<% if current_user.profile %>
+<%# if current_user.profile %>
   
-<% end %>
+<%# end %>
 <!--Temp placement of notifications-->
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
