--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New Profile</h1>
+<h1>Your Details</h1>
+<p>Please complete your registration by filling in your details below. Note that the company shouldn't include the location as this is designed in the city field.</p>
 
 <%= render 'form' %>
 
