--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,9 +36,9 @@
 <br><br>
 <strong>I'm up to...</strong>
 <ul>
-  <li>Most recent: I'm up to redirecting a user to the 'create a profile' page automatically after log in if they haven't set up a profile using "if current_user.profile"</li>
   <li>Creating the user_controller and making an admin and a super admin <span class="btn btn-warning btn-sml">In Progress, privelages for admin/super need to be defined</span></li>
   <li>Need to limit profile create to 1 per user and prevent them from seeing anyone else's profiles</li>
+  <li>Need to restrict access to view/edit user profiles to ONLY the user it belongs to (unless an admin)</li>
   <li>Create a 'delete' def in user to log out a user <span class="btn btn-success btn-sml">Done!</span></li>
-  <li>Force a user to create a profile before going any further or being able to see another page. Always direct to profile.</li>
+  <li>Redirecting a user to the 'create a profile' page automatically after log in if they haven't set up a profile using "if current_user.profile" <span class="btn btn-success btn-sml">Done!</span></li>
 </ul>
