--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,14 +2,21 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Alpha – PWWDashboard</a>
+            <a class="navbar-brand" href="/">Alpha – PWWDashboard</a>
           </div>
           <div id="navbar" class="">
             <ul class="nav navbar-nav">
               <li class=""><a href="/">home</a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
+              <li>
+                <div class="btn-group" role="group" aria-label="switch user roles" style="padding-top:8px;">
+                    <a href="make_super_admin/<%= current_user.id %>" class="btn <%= 'btn-primary' if current_user.has_role? :super_admin %>">Super Admin</a>
+                    <a href="make_admin/<%= current_user.id %>" class="btn <%= 'btn-primary' if current_user.has_role? :admin %>">Admin</a>
+                    <a href="remove_roles/<%= current_user.id %>" class="btn btn-secondary ">User</a>
+                </div>
+              </li>
             </ul>
+            
+            
             <ul class="nav navbar-nav navbar-right">
             <!-- SUPER ADMIN TOOLS PANEL -->
                 <% if current_user.has_role? :super_admin %>
@@ -28,7 +35,7 @@
             <!-- ADMIN TOOLS PANEL -->
             <% elsif current_user.has_role? :admin %>
                <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Action</a></li>
                   <li><a href="#">Another action</a></li>
