--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,10 +12,9 @@
 
 <br>
   <hr>
-<br>
 
 <% if current_user.profile %>
-      <span>Welcome back, <%= current_user.profile.company_name %>,
+      <span>Welcome back, <%= current_user.email %>,
       you're role is
         <% if current_user.has_role? :admin %>
             <span><strong>admin</strong></span>
@@ -25,20 +24,19 @@
       </span>
   <% else %>
       <span>How about creating <%= link_to 'a profile?', new_profile_path %></span>
-      <br>
+<% end %>
       <hr>
-<% end %>
-<br><br>
-<% User.all.each do |user| %>
-  <%= user.email %> | <%# link_to 'Delete', destroy_me_path, method: :delete, data: { confirm: "You sure?" } %>
-  <%= link_to 'Delete User', user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
-<br><br>
 <strong>I'm up to...</strong>
 <ul>
+  <li>Work out how to change colour/styling of the alerts + use FontAwesome rather than images for icons.</li>
   <li>Creating the user_controller and making an admin and a super admin <span class="btn btn-warning btn-sml">In Progress, privelages for admin/super need to be defined</span></li>
   <li>Need to limit profile create to 1 per user and prevent them from seeing anyone else's profiles</li>
   <li>Need to restrict access to view/edit user profiles to ONLY the user it belongs to (unless an admin)</li>
   <li>Create a 'delete' def in user to log out a user <span class="btn btn-success btn-sml">Done!</span></li>
   <li>Redirecting a user to the 'create a profile' page automatically after log in if they haven't set up a profile using "if current_user.profile" <span class="btn btn-success btn-sml">Done!</span></li>
 </ul>
+<hr>
+<% User.all.each do |user| %>
+  <%= user.email %> | <%# link_to 'Delete', destroy_me_path, method: :delete, data: { confirm: "You sure?" } %>
+  <%= link_to 'Delete User', user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
