--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,6 +28,7 @@
       <hr>
 <strong>I'm up to...</strong>
 <ul>
+  <li>Created an admin panel restricted to admins and suepr admins only + help page for how to use the site as admin or user + contact page</li>
   <li>Work out how to change colour/styling of the alerts + use FontAwesome rather than images for icons.</li>
   <li>Creating the user_controller and making an admin and a super admin <span class="btn btn-warning btn-sml">In Progress, privelages for admin/super need to be defined</span></li>
   <li>Need to limit profile create to 1 per user and prevent them from seeing anyone else's profiles</li>
