--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,11 +7,13 @@
           <div id="navbar" class="">
             <ul class="nav navbar-nav">
               <li class=""><a href="/">home</a></li>
+              <li><%= link_to 'help', help_path, class: 'nav-link' %></li>
+              <li><%= link_to 'contact', contact_path, class: 'nav-link' %></li>
               <li>
                 <div class="btn-group" role="group" aria-label="switch user roles" style="padding-top:8px;">
                     <a href="make_super_admin/<%= current_user.id %>" class="btn <%= 'btn-primary' if current_user.has_role? :super_admin %>">Super Admin</a>
                     <a href="make_admin/<%= current_user.id %>" class="btn <%= 'btn-primary' if current_user.has_role? :admin %>">Admin</a>
-                    <a href="remove_roles/<%= current_user.id %>" class="btn btn-secondary ">User</a>
+                    <a href="remove_roles/<%= current_user.id %>" class="btn <%= 'btn-primary' unless (current_user.has_role? :admin) || (current_user.has_role? :super_admin) %>">User</a>
                 </div>
               </li>
             </ul>
@@ -23,12 +25,13 @@
                     <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Super Admin <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to 'View Profiles', profiles_path %></li>
-                  <li><a href="#">Create Profile</a></li>
+                  <li><%= link_to 'Admin Panel', admin_path, class: 'nav-link' %></li>
                   <li role="separator" class="divider"></li>
+                  <li><%= link_to 'View Profiles', profiles_path %></li>
                   <% if current_user.profile %>
                     <li><%= link_to 'Edit Profile', edit_profile_path(current_user.profile), class: 'nav-link' %></li>
                   <% end %>
+                  <li role="separator" class="divider"></li>
                   <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
                 </ul>
               </li>
@@ -37,13 +40,9 @@
                <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
+                  <li><%= link_to 'Admin Panel', admin_path, class: 'nav-link' %></li>
                   <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
+                  <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
                 </ul>
               </li>
               <% else %>
