adding help files

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
       <hr>
 <strong>I'm up to...</strong>
 <ul>
-
+  <li>Creating Help pages, need to print out all help files, display categoriess on the side and manage who can see what + make use of anchor_ids</li>
   <li>Work out how to change colour/styling of the alerts + use FontAwesome rather than images for icons.</li>
   <li>Creating the user_controller and making an admin and a super admin <span class="btn btn-warning btn-sml">In Progress, privelages for admin/super need to be defined</span></li>
   <li>Need to limit profile create to 1 per user and prevent them from seeing anyone else's profiles</li>
