--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,7 +7,7 @@
           <div id="navbar" class="">
             <ul class="nav navbar-nav">
               <li class=""><a href="/">home</a></li>
-              <li><%= link_to 'help', help_path, class: 'nav-link' %></li>
+              <li><%= link_to 'help', helps_path, class: 'nav-link' %></li>
               <li><%= link_to 'contact', contact_path, class: 'nav-link' %></li>
               <li>
                 <div class="btn-group" role="group" aria-label="switch user roles" style="padding-top:8px;">
