set up scaffold, about to set up CSV uploader

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Clients</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Client</th>
@@ -40,4 +40,4 @@
 
 <br>
 
-<%= link_to 'New Client', new_client_path %>
+<%= link_to 'New Client', new_client_path, class: 'btn btn-default' %>
