changed clients to projects

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,48 +2,48 @@
 
 <p>
   <strong>Client:</strong>
-  <%= @client.client %>
+  <%= @project.client %>
 </p>
 
 <p>
   <strong>Project status:</strong>
-  <%= @client.project_status %>
+  <%= @project.project_status %>
 </p>
 
 <p>
   <strong>Project status:</strong>
-  <%= @client.project_status %>
+  <%= @project.project_status %>
 </p>
 
 <p>
   <strong>Project name:</strong>
-  <%= @client.project_name %>
+  <%= @project.project_name %>
 </p>
 
 <p>
   <strong>Completion date:</strong>
-  <%= @client.completion_date %>
+  <%= @project.completion_date %>
 </p>
 
 <p>
   <strong>Completion month:</strong>
-  <%= @client.completion_month %>
+  <%= @project.completion_month %>
 </p>
 
 <p>
   <strong>Budget revenue:</strong>
-  <%= @client.budget_revenue %>
+  <%= @project.budget_revenue %>
 </p>
 
 <p>
   <strong>Budget margin:</strong>
-  <%= @client.budget_margin %>
+  <%= @project.budget_margin %>
 </p>
 
 <p>
   <strong>Budget margin:</strong>
-  <%= @client.budget_margin %>
+  <%= @project.budget_margin %>
 </p>
 
-<%= link_to 'Edit', edit_client_path(@client) %> |
-<%= link_to 'Back', clients_path %>
+<%= link_to 'Edit', edit_project_path(@project) %> |
+<%= link_to 'Back', projects_path %>
