--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,7 +9,7 @@
               <li class=""><a href="/">home</a></li>
               <li><%= link_to 'help', helps_path, class: 'nav-link' %></li>
               <li><%= link_to 'contact', contact_path, class: 'nav-link' %></li>
-              <li><%= link_to 'clients', clients_path, class: 'nav-link' %></li>
+              <li><%= link_to 'projects', projects_path, class: 'nav-link' %></li>
               <li>
                 <div class="btn-group" role="group" aria-label="switch user roles" style="padding-top:8px;">
                     <a href="../make_super_admin/<%= current_user.id %>" class="btn <%= 'btn-primary' if current_user.has_role? :super_admin %>">Super Admin</a>
