--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,2 +1,14 @@
 <h1>Pages#admin</h1>
 <p>Find me in app/views/pages/admin.html.erb</p>
+
+<%= simple_form_for(:user, :url => user_invitation_path) do |f| %>
+    <%= f.error_notification %>
+    
+<div class="form-inputs">
+    <%= f.input :email %>
+</div>
+
+<div class="form-actions">
+    <%= f.button :submit %>
+</div>
+<% end %>
