--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Projects</h1>
+<h2><%= @projects.count %></h2>
 
 <table class="table">
   <thead>
@@ -13,7 +14,7 @@
       <th>Completion month</th>
       <th>Budget revenue</th>
       <th>Budget margin</th>
-      <th>Budget margin</th>
+      <th>Budget margin %</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -29,7 +30,7 @@
         <td><%= project.completion_month %></td>
         <td><%= project.budget_revenue %></td>
         <td><%= project.budget_margin %></td>
-        <td><%= project.budget_margin %></td>
+        <td><%= project.budget_margin_pct %>%</td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
