--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Projects</h1>
-<h2><%= @projects.count %></h2>
+<h2>Total Projects: <%= @projects.count %></h2>
+<h3>Your Clients: <%= current_user.clients.count %></h3>
+<%= @clients.find(current_user.clients[1]).client_name %>
 
 <table class="table">
   <thead>
@@ -19,8 +21,8 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @projects.each do |project| %>
+  <tbody> 
+    <% @myprojects.each do |project| %>
       <tr>
         <td><%= project.client %></td>
         <td><%= project.project_status %></td>
