updating profile show page to print out clients so that a user can be assigned to a client. Feature is not currently working.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
       <hr>
 <strong>I'm up to...</strong>
 <ul>
-  <li><span class="btn btn-danger btn-sm">CURRENT</span> In the projects controller, I'm attempting to create a @myprojects that compares what clients you are assigned to, with the client name of the project, and add that to the @myprojects list to display. </li>
+  <li><span class="btn btn-danger btn-sm">CURRENT</span> Trying to make a form with check boxes that updates the user's clients (on the Profiles/show/ page).</li>
   <il>Changed 'clients' to 'projects'; need to create join tables for A) Users/Projects B) Clients/Projects</il>
   <li>Need to work out a way that uploading a CSV file to projects adds the project to a client (using the client field in the CSV file)</li>
   <hr>
