--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -50,21 +50,16 @@
 </p>
 
 <div>
-<%# form_for(:profile, :url => {:action => 'update', :id => @profile}) do |f|%>
-  <%# f.text_field(:last_name) %>
-  <%# submit_tag("Update") %>
-<%# end %>
+<%= form_for @profile.user, url: user_assign_clients_path(@profile.user) do |f| %>
+  <ul><% @clients.each do |client| %>
+    <li>
+        <%= check_box_tag "user[client_ids][]", client.id, @profile.user.clients.include?(client) %>
+        <%= client.client_name %>
+    </li>
+  <% end %></ul>
+  <%= f.submit "Add Clients", class: 'btn btn-default' %>
+<% end %>
 
-	<strong>Assign Clients:</strong>
-	  <% @clients.all.each do |client| %>
-	      <li>
-          <%= check_box_tag "user[client_ids][]", client.id %>
-          <%= client.client_name %> – <%= ISO3166::Country[client.country] %>
-        </li>
-	  <% end %>
-    <%= link_to 'Add Clients', '#', class: 'btn btn-primary' %>
-    <br>
-	  <br>
 </div>
 
 <div style="margin-top: 50px;">
