updating before moving to new branch to work more on accounts

--- a/app/views/pages/manage_users.html.erb
+++ b/app/views/pages/manage_users.html.erb
@@ -1,5 +1,6 @@
 <h1>Manage Users</h1>
 <h5>Select a user below and assign clients to them.</h5>
+<!-- The below code is a basic example of how to send inforation via POST (secure over HTTP) to the view controller. -->
 <%# form_tag do %>
     <%# text_field_tag 'name' %>
     <%# @clients.all.each do |c| %>
