--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
             <ul class="nav navbar-nav">
               <li class=""><a href="/">home</a></li>
               <li><%= link_to 'help', helps_path, class: 'nav-link' %></li>
-              <li><%= link_to 'contact', contact_path, class: 'nav-link' %></li>
+              <li><%= link_to 'manage users', manage_users_path, class: 'nav-link' %></li>
               <li><%= link_to 'projects', projects_path, class: 'nav-link' %></li>
               <li><%= link_to 'clients', clients_path, class: 'nav-link' %></li>
               <li>
