organised manage_users area better, created blank checkbox so admins can now deselect all clients so that a user isn't asigned to any. Attempting to get mailer working. Still failling.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,6 +33,8 @@
 <ul>Things to ask Matt
   <li>Have I done the correct thing regarding assigning users to a client by having a URL?</li>
   <li>Have I filtered the database correctly for projects?</li>
+  <li>How do I build out the assign_users form so that it catches errors/incomplete forms and renders the form again?</li>
+  <li>How do you create an invisible checkbox for when no other responses are checked?</li>
 </ul>
 <hr>
 <% User.all.each do |user| %>
