--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -46,5 +46,16 @@
   <%= file_field_tag :file %>
   <%= submit_tag 'Upload', class: 'btn btn-default'%>
 <% end %>
-
+<br><br>
+<div class="btn-group">
+  <button type="button" class="btn btn-secondary dropdown-toggle"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Delete All...
+  </button>
+  <div class="dropdown-menu">
+    <%= link_to 'Delete all', delete_all_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'dropdown-item' %>
+  </div>
+</div>
+<br><br>
 <%= link_to 'New Project', new_project_path, class: 'btn btn-default' %>
+
