advanced search function working, can filter by category and futher by projects. If no projects are selected, all projects from the client will be displayed

--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -9,7 +9,8 @@
 
 <span class="field" style="margin-right: 50px" >
     <%= s.label :project %>
-    <%= s.select :project, options_for_select(@project) %>
+    <%# s.select :project, options_for_select(@project) %>
+    <%= s.select :project, ['All', options_for_select(@project)] %>
 </span>
 
 <span class="action">
