turned search form into partial, need to figure out how to use PATCH so that the form pre-populates with the most recent search

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,8 @@
       <hr>
 <strong>I'm up to...</strong>
 <ul>
-  <li><span class="btn btn-danger btn-sm">CURRENT</span> Trying to make a form with check boxes that updates the user's clients (on the Profiles/show/ page).</li>
+  <li><span class="btn btn-danger btn-sm">CURRENT</span> Trying to render the 'search' form on the the search results page. This is working, however perhaps if I render the form and use the way the 'edit' page works, it will remember the preferences.</li>
+  <li>Trying to make a form with check boxes that updates the user's clients (on the Profiles/show/ page).</li>
   <il>Changed 'clients' to 'projects'; need to create join tables for A) Users/Projects B) Clients/Projects</il>
   <li>Need to work out a way that uploading a CSV file to projects adds the project to a client (using the client field in the CSV file)</li>
   <hr>
