--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,13 +1,14 @@
+<%= render 'form' %>
+
 <h1>Results</h1>
 
-<% if @search.search_projects.empty? %>
+<% if @search_results.search_projects.empty? %>
     <p>No Records Found</p>
 <% else %>
     <table class="table">
   <thead>
     <tr>
       <th>Client</th>
-      <th>Project status</th>
       <th>Project status</th>
       <th>Project name</th>
       <th>Completion date</th>
@@ -20,10 +21,9 @@
   </thead>
 
   <tbody> 
-    <% @search.search_projects.each do |project| %>
+    <% @search_results.search_projects.each do |project| %>
       <tr>
         <td><%= project.client %></td>
-        <td><%= project.project_status %></td>
         <td><%= project.project_status %></td>
         <td><%= project.project_name %></td>
         <td><%= project.completion_date %></td>
