--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -5,7 +5,7 @@
     <%= s.collection_select :client, @client, :client_name, :client_name, {}, {multiple: true} %>
 </span>
 
-<span class="field" style="margin-right: 50px" style="width: 600px; background-color: red;" >
+<span class="field" style="margin-right: 50px" >
     <%= s.label :project %>
     <%= s.grouped_collection_select :project, @client, :projects, :client_name, :project_name, :project_name, {}, {multiple: true}  %>
 </span>
